# co-md-autograd-c

./: .gitignore  CMakeLists.txt  README.md  main.c  makefile
src/: add.c  add.h  main.c  read_csv.c  read_csv.h  tensor.c  tensor.h  value.c  value.h
test/: test.c  test_add.c  test_tensor.c  test_value.c
